examples/test/testpolicy8556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8556
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key19: value17
      key41: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value14
      podSelector:
        matchLabels:
          key25: value8
          key11: value36
          key44: value47
